<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

    <com.google.android.exoplayer.VideoSurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.google.android.exoplayer.text.SubtitleView
        android:id="@+id/subtitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible" />

    <View
        android:id="@+id/shutter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88000000"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/player_state_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/debug_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/controls_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/video_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showVideoPopup"
                android:text="@string/video"
                android:visibility="gone" />

            <Button
                android:id="@+id/audio_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showAudioPopup"
                android:text="@string/audio"
                android:visibility="gone" />

            <Button
                android:id="@+id/text_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showTextPopup"
                android:text="@string/text"
                android:visibility="gone" />

            <Button
                android:id="@+id/verbose_log_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showVerboseLogPopup"
                android:text="@string/logging" />

            <Button
                android:id="@+id/retry_button"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutOSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#80000000"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_pause" />

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_record" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00f817" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/txtET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textColor="#ffffff" />
            </FrameLayout>

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/discrete3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorFormatter="%04d"
                app:dsb_max="3600"
                app:dsb_min="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>